--- a/css/style.css
+++ b/css/style.css
@@ -85,3 +85,45 @@ div:nth-child(4) {
 	color: white;
 
 }
+#services   {
+
+    margin-top: 100px;
+    background-color: whitesmoke;
+    margin: 90px;
+    height: 400px;
+
+}
+#services h2    {
+
+    padding-top: 100px;
+    padding-bottom: 100px;
+    font-size: 35px;
+    
+}
+#services ul,li{
+  
+    margin-right: 5px;
+    margin-left: 5px;
+    display: flex;
+    justify-content: center;
+    display: inline;
+    padding: 40px 55px;
+}
+li{
+    
+    margin-right: 13px;
+    margin-left: 13px;
+    background-color: white;
+}
+ul :first-child {
+
+    background-color: orangered;
+
+}
+li:hover    {
+
+	box-shadow: 0px -1px 5px 4px rgba(78, 78, 78, 0.432);
+	-webkit-box-shadow: 0px -1px 5px 4px rgba(78, 78, 78, 0.432);
+	-moz-box-shadow: 0px -1px 5px 4px rgba(78, 78, 78, 0.432);
+
+}
